@@ -1,5 +1,6 @@
 === (ongoing) ===
 
+- Added ``has_seen_modal`` template tag
 
 === 0.3 ===
 
